Refactor ServiceMetadata to hold all service related metdata